--- a/ElecyServer/ElecyServer.csproj
+++ b/ElecyServer/ElecyServer.csproj
@@ -47,16 +47,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Global.cs" />
     <Compile Include="MySQL\Database.cs" />
     <Compile Include="GameRoom.cs" />
-    <Compile Include="Global.cs" />
     <Compile Include="MySQL\MySQL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
-    <Compile Include="ServerHandleNetworkData.cs" />
-    <Compile Include="ServerSendData.cs" />
-    <Compile Include="ServerTCP.cs" />
+    <Compile Include="Server\ServerHandleNetworkData.cs" />
+    <Compile Include="Server\ServerSendData.cs" />
+    <Compile Include="Server\ServerTCP.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bindings\Bindings.csproj">
