--- a/Bindings/Bindings.csproj
+++ b/Bindings/Bindings.csproj
@@ -45,6 +45,7 @@
     <Compile Include="NetworkPackets.cs" />
     <Compile Include="PacketBuffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="States.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
