--- a/ElecyServer/ElecyServer.csproj
+++ b/ElecyServer/ElecyServer.csproj
@@ -73,9 +73,7 @@
     <Compile Include="Server.Designer.cs">
       <DependentUpon>Server.cs</DependentUpon>
     </Compile>
-    <Compile Include="Server\ServerHandleClientData.cs" />
-    <Compile Include="Server\ServerHandlePlayerData.cs" />
-    <Compile Include="Server\ServerHandleRoomData.cs" />
+    <Compile Include="Server\ServerHandleData.cs" />
     <Compile Include="Server\ServerSendData.cs" />
     <Compile Include="Server\ServerTCP.cs" />
   </ItemGroup>
