--- a/ElecyServer/app.config
+++ b/ElecyServer/app.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
       <add name="ServerConnection" 
-         connectionString="DataSource=.\SQLEXPRESS; Catalog=ServerData; Integrated Security=True" 
+         connectionString="data source = (localdb)\MSSQLLOcalDB; Initial Catalog = ServerData; Integrated Security=True" 
          providerName="System.Data.SqlClient"
       />
   </connectionStrings>
