(InWork) FriendList Function Added

--- a/ElecyServer/app.config
+++ b/ElecyServer/app.config
@@ -5,8 +5,16 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-      <add name="ServerConnection" 
-         connectionString="data source = (localdb)\MSSQLLOcalDB; Initial Catalog = ServerData; Integrated Security=True" 
+      <add name="DataConnection" 
+         connectionString="data source = (localdb)\MSSQLLOcalDB; Initial Catalog = ClientsData; Integrated Security=True" 
+         providerName="System.Data.SqlClient"
+      />
+        <add name="MapsConnection" 
+         connectionString="data source = (localdb)\MSSQLLOcalDB; Initial Catalog = MapsData; Integrated Security=True" 
+         providerName="System.Data.SqlClient"
+      />
+        <add name="BlackListConnection" 
+         connectionString="data source = (localdb)\MSSQLLOcalDB; Initial Catalog = BlackList; Integrated Security=True" 
          providerName="System.Data.SqlClient"
       />
   </connectionStrings>
